# btrtg

./: .gitignore  CMakeLists.txt  README.md
asm/: assemble.c  assemble.h  bseqi.c  bseqi.h  buf2token.c  buf2token.h  constVal.h  directiv.c  eval.c  gendata.c  gendata.h  generator.c  labels.c  listing.c  listing.h  nasm.c  operand.c  operand.h  options.c  options.h  parseXML.c  parseXML.h  parser.c  parser.h  pptok.pl  pragma.c  preproc.c  randomlib.h  seed.h  srcfile.c  srcfile.h  tokhash.pl  x86pg.c  x86pg.h
btrtg/: CMakeLists.txt  btrtg-main.c  insn-test.c  output_file_wrapper.c  output_file_wrapper.h
btrtg/system-lib/: bootloader.asm  service.h
btrtg/user-lib/: checkfunctions.h  checklib.c  compile-test.sh  outputlib.c  run-all-templates.sh  verification.h
common/: insn-test.c
config/: config.h
core/: buf2token.c  buf2token.h  check.c  constVal.h  ctrl.c  ctrl.h  eval.c  gendata.c  gendata.h  generator.c  labels.c  model.c  model.h  operand.c  operand.h  section.c  seed.c  srcfile.h  tk.c  tk.h  tmplt.c  tmplt.h  wdtree.c  wdtree.h
disasm/: disasm.c  disasm.h
docs/: 模板书写规范.md
engine/: asmlib.c  asmlib.h  assemble.c  assemble.h  buf2token.c  check.h  ctrl.c  ctrl.h  error.c  gendata.c  gendata.h  generator.c  mem.c  mem.h  operand.c  operand.h  section.c  seed.c  srcfile.c  tk.c  tk.h  tmplt.c  tmplt.h  wdtree.c  wdtree.h
include/: compiler.h  dfmt.h  error.h  generator.h  insn-test.h  insnlist.h  insns.h  labels.h  nasm.h  nasmlib.h  nctype.h  ofmt.h  opflags.h  queue.h  reg.h  section.h  seed.h  tables.h  x86pg.h
intg-tests/: CMakeLists.txt  insn-test.c  intg-main.c
intg-tests/compile/: checkfunctions.h  checklib.c  compile.sh  ld.script  output.h  outputlib.c  printlib.c  testlib.c  verification.h
intg-tests/lib/: printlib.c
intg-tests/system-lib/: Makefile  service.c  vmbuilder.c
intg-tests/user-lib/: checkfunctions.h  checklib.c  ld.script  outputlib.c  run-all-templates.sh  user-compile.sh  verification.h
macros/: macros.pl  standard.mac
nasmlib/: insnlist.c  random.c  string.c  transform.c
output/: asmout.c  debuglog.c  legacy.c  outform.c  outform.h  outlib.h
perllib/: insnfilter.ph
stat/: bseqi.c  x86pg.c
test/: CMakeLists.txt  test.h  test_main.c  tests.pl
test/conventional/: mov.c
unit-tests/: CMakeLists.txt  ut-main.c  ut.h
unit-tests/insn/: add.c  cmov.c  dec.c  div.c  insn-test.c  insn-test.h  jmp.c  mov.c  push.c  sar.c  sbb.c  test.c
x86/: insns.pl  reg.h
x86asmpg/: CMakeLists.txt  insn-test.c  x86asmpg-main.c  x86asmpg_main.c
x86asmpg/user-lib/: checklib.c  compile-test.sh  run-all-templates.sh  verification.h
xmlmodel/templates/: add.xml  fadd.xml  insn-class.xml  insn-group.xml  template-sample.xml  test.xml
xmlmodel/templates/group/: flag-pattern-group.xml  insn-group.xml
xmlmodel/templates/intg/: flag-pattern.cmovcc.xml  flag-pattern.jcc.xml  flag-pattern.setcc.xml  flag-pattern.xml
xmlmodel/templates/unit/General-Purpose/binary-arithmetic/: div.xml  neg.xml  sbb.xml
xmlmodel/templates/unit/General-Purpose/bit-and-byte/: bt.xml  btc.xml  btr.xml  bts.xml  setae.xml  setbe.xml  setle.xml  setpe.xml  sets.xml
xmlmodel/templates/unit/General-Purpose/control-transfer/: call.xml  ja.xml  jb.xml  jbe.xml  je.xml  jecxz.xml  jg.xml  jge.xml  jmp.xml  jno.xml  jo.xml  loop.xml  loopnz.xml  loopz.xml
xmlmodel/templates/unit/General-Purpose/data-transfer/: bswap.xml  cbw.xml  cdq.xml  cmovae.xml  cmove.xml  cmovge.xml  cmovl.xml  cmovle.xml  cmovnc.xml  cmovno.xml  cmovnp.xml  cmovns.xml  cmovo.xml  cmpxchg.xml  cwd.xml  mov.xml  movsx.xml  xchg.xml
xmlmodel/templates/unit/General-Purpose/decimal-arithmetic/: daa.xml
xmlmodel/templates/unit/General-Purpose/eflag/: stc.xml
xmlmodel/templates/unit/General-Purpose/logical/: and.xml  or.xml
xmlmodel/templates/unit/General-Purpose/miscellaneous/: lea.xml
xmlmodel/templates/unit/General-Purpose/shift-and-rotate/: rcl.xml  rcr.xml  ror.xml  sal.xml  sar.xml  shl.xml  shld.xml  shr.xml
xmlmodel/templates/unit/General-Purpose/string/: lods.xml  movs.xml  repecmps.xml  repnecmps.xml  repstos.xml  stos.xml
xmlmodel/templates/unit/MMX/comparison/: pcmpeq.xml  pcmpgt.xml
xmlmodel/templates/unit/MMX/conversion/: packss.xml  packuswb.xml  punpckh.xml  punpckl.xml
xmlmodel/templates/unit/MMX/data-transfer/: maskmovq.xml  movd.xml  movntdq.xml  movnti.xml  movntpd.xml  movntq.xml  movq.xml  padd.xml  paddus.xml
xmlmodel/templates/unit/MMX/logical/: pand.xml  pxor.xml
xmlmodel/templates/unit/MMX/packed-arithmetic/: paddb.xml  (+19 more)
xmlmodel/templates/unit/binary-arithmetic/: adc.xml  adcx.xml  cmp.xml  inc.xml  sub.xml
xmlmodel/templates/unit/bit-and-byte/: bsf.xml  bsr.xml  bt.xml  btc.xml  btr.xml  bts.xml  seta.xml  setb.xml  sete.xml  setg.xml  setge.xml  setl.xml  setne.xml  setno.xml  setns.xml  seto.xml  setpo.xml  test.xml
xmlmodel/templates/unit/control-transfer/: jae.xml  jc.xml  jcxz.xml  jl.xml  jle.xml  jnc.xml  jne.xml  jns.xml  jpe.xml  jpo.xml  js.xml
xmlmodel/templates/unit/data-transfer/: bswap.xml  cmova.xml  cmovb.xml  cmovbe.xml  cmovc.xml  cmovg.xml  cmovne.xml  cmovp.xml  cmovs.xml  cmpxchg.xml  cwde.xml  xadd.xml
xmlmodel/templates/unit/decimal-arithmetic/: das.xml
xmlmodel/templates/unit/eflag/: clc.xml  cld.xml  cmc.xml  std.xml
xmlmodel/templates/unit/logical/: not.xml  xor.xml
xmlmodel/templates/unit/miscellaneous/: lea.xml
xmlmodel/templates/unit/opnd_process/: pushpop.xml  store.xml
xmlmodel/templates/unit/shift-and-rotate/: rol.xml  shrd.xml
xmlmodel/templates/unit/single-instruction/: add.xml  fadd.xml  fcos.xml  fdiv.xml  fdivr.xml  fmul.xml  fprem.xml  fsubr.xml  fyl2x.xml  lea.xml  padd.xml  trig.xml
xmlmodel/templates/unit/string/: cmps.xml  repescas.xml  replods.xml  repmovs.xml  repnescas.xml  scas.xml
xmlmodel/tks/: fixedpointConsts.xml  fixedpointTK.xml  floatpointConsts.xml  floatpointTK.xml  mmxConsts.xml  mmxTK.xml  sse2-mmxTK.xml  sse2-sseTK.xml  sse2Consts.xml  sse2TK.xml  sseConsts.xml  sseTK.xml
xmlparser/: parseLib.c  parseLib.h  parseTKs.c  parseTmplt.c  parseXML.c  parseXML.h
(+259 files in other folders)
